Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-03-03 (SVN):
    * removed gl_stencilshadow cvar, enabled shadows stencil buffering
      by default. BTW, shadows have always been broken and svn commit
      rev.2509 added even another brokenness to them: remove them soon?

2012-03-03 (SVN):
    * gl_draw.c: Replaced the GL_MipMap() procedure by a newer version
      adapted from darkplaces.

2012-03-03 (SVN):
    * gl_model.h, gl_model.c: Added XF_GLOW_TORCH_EFYPT as new flag for
      eflmtrch.mdl, adjusted Mod_SetAliasModelExtraFlags() to use it.
    * gl_rmain.c: Changed the default of torch glow effects to disabled.
      Adjusted R_DrawGlow for the new XF_GLOW_TORCH_EFYPT.
    * menu.c: Changed the order of torch and missile glow options.

2012-03-03 (SVN):
    * engine/h2shared/h2config.h, launcher/games.h: Updated notes about
      the ENABLE_OLD_DEMO compile time option. (... again...)

2012-03-03 (SVN):
    * vregset.c: Removed the trailing newline from the Sys_Error message
      and used __func__ for function name printing.

2012-03-03 (SVN):
    * engine/h2shared/h2config.h, launcher/games.h: Updated notes about
      the ENABLE_OLD_DEMO compile time option.

2012-03-03 (SVN):
    * cl_parse.c: Allow intermission picture and messages to be drawn
      during demo recording and playback. Do not automatically send a
      button0 cmd to skip the intermission and let the recorder to do
      that by himself. Do not automatically stop recording upon game
      ending and let the recorder to do that by himself.
    * host_cmd.c (Host_Reconnect_f): Adjusted after the removal of the
      demo hacks.

2012-02-29 (SVN):
    * hexen2/cl_parse.c (CL_ParseServerInfo): Check for old demo before
      calling Mod_FindName for crusader and necromancer in player_models
      assingment, similar to what we have been doing for the succubus.
    * hexenworld/client/cl_parse.c (CL_ParseModellist): Likewise.

2012-02-29 (SVN):