@@ -31,6 +31,8 @@ Changes since the uhexen2-1.5.1 release:
 * All platforms: Implemented fov in opengl hexen2, useful
   for widescreen resolutions. Revised the implementations
   in hexenworld, as well as the software renderer.
+* All platforms, OpenGL: Fixed shadows spot which was broken
+  back in 2007 during v1.4.2 development.
 * All platforms, input: Discard mouse/joystick motion when
   in cameramode. Discard the accumulated mouse motion when
   starting a game or when loading a saved game to prevent
